--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
-    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "imagekit": "^6.0.0",
     "jose": "^6.1.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
