--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jose": "^6.1.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sharp": "^0.34.5",
@@ -26,6 +27,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
